--- a/footclick_front/package.json
+++ b/footclick_front/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.5",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "mdbreact": "^4.22.0",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
